tests/negative/test_block_eval_passing_no_pass_has_loop.orb
fnc main () () {
    eval (sym (x 0));
    eval (block i32 {
        = x (+ x 1);
        loop (< x 5);
        loop false;
    });
};